# insight-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  start.ps1  stop.ps1
.github/workflows/: ci.yml
apps/api/: Dockerfile
apps/api/app/: auth.py  cache.py  guardrails.py  main.py  metrics.py  ratelimit.py
apps/api/app/routes/: chat.py  ingest.py
apps/web/: .env.local  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/components/: DocList.tsx  UploadZone.tsx
evals/: benchmark.py  benchmark_results.json  golden_set.jsonl  run_ragas.py
infra/: docker-compose.yml  prometheus.yml
infra/k8s/: api.yaml  router.yaml
scripts/: gen_router_data.py  make_docs.py  train_router.py
services/agent/: graph.py  prompts.py  retrieval.py
services/common/: config.py  embeddings.py  llm.py  qdrant.py  tracing.py
services/ingestion/: chunking.py  parser.py  pipeline.py
services/router/: Dockerfile  server.py
tests/: test_smoke.py
