[project]
name = "insight-agent"
version = "0.1.0"
description = "Agentic multi-modal RAG platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sse-starlette>=2.1",
  "httpx>=0.27",
  "redis>=5.0",
  "qdrant-client>=1.12",
  "langgraph>=0.2.40",
  "langchain-core>=0.3",
  "openai>=1.30",
  "FlagEmbedding>=1.3",
  "docling>=2.7",
  "unstructured>=0.15",
  "rank-bm25>=0.2.2",
  "tiktoken>=0.7",
  "python-multipart>=0.0.9",
  "PyJWT>=2.9",
  "presidio-analyzer>=2.2",
  "presidio-anonymizer>=2.2",
  "langfuse>=2.50",
  "ragas>=0.2",
  "datasets>=2.20",
  "prometheus-client>=0.20",
  "tenacity>=9.0",
]

[project.optional-dependencies]
train = ["unsloth", "torch>=2.3", "transformers>=4.44", "trl>=0.10", "peft>=0.12", "accelerate>=0.33"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.11"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
